Fix victory counter alignment

--- a/src/components/bars/bars.css
+++ b/src/components/bars/bars.css
@@ -46,9 +46,10 @@
   flex-direction: row-reverse;
 }
 
-.victory {
+.victories-item {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .victories-count {
